--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.1', '3.2', '3.3']
+        ruby-version: ['3.1', '3.2', '3.3', '3.4']
 
     steps:
       - uses: actions/checkout@v4
@@ -23,6 +23,8 @@ jobs:
           bundler-cache: true
 
       - name: Run tests
+        env:
+          OPENAI_API_KEY: test-api-key
         run: bundle exec rspec
 
   lint:
